mesh/ingress-controller/ingress-v.0.2/tomcat-test/echo-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: happy-ingress
  namespace: nginx-ingress
  annotations:
    INGRESS.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: happy.k8s.io
    http:
      paths:
      - path: /echoserver
        backend:
          serviceName: echoserver-svc
          servicePort: 80
